2008-08-14  Martin Rudalics  <rudalics@gmx.at>

	* help.el (with-help-window): Return last value in BODY.

2008-08-14  Michael Albinus  <michael.albinus@gmx.de>

	* net/xesam.el (xesam-refresh-entry): Use `save-excursion' in the
	notify function of the URL.
	(xesam-new-search): Encode special characters in the query string.

2008-08-13  Chong Yidong  <cyd@stupidchicken.com>

	* term/ns-win.el (ns-parse-geometry): Rename from x-parse-geometry.

2008-08-13  Andreas Schwab  <schwab@suse.de>

	* net/tramp.el (tramp-handle-shell-command): Handle output going
	to current buffer like shell-command.  Don't disable undo.

2008-08-13  Glenn Morris  <rgm@gnu.org>

	* eshell/esh-cmd.el (eshell/which): Handle the case where no description
	is found.

2008-08-12  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-emacs-features):
	argumentative-bod-function: bind mark-ring to avoid accumulating a
	spurious mark.

2008-08-12  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (visual-line--saved-state): New var.
	(visual-line-mode): Save local values of variables, and restore
	them when visual-line-mode is disabled.

2008-08-12  NAKAGAWA Makoto  <gha03025@nifty.ne.jp>  (tiny change)

	* net/ldap.el (ldap-search-internal): Tweak URL regexp.

2008-08-11  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/cc-defs.el (c-emacs-features): Check
	beginning-of-defun-raw instead of beginning-of-defun, and avoid
	moving point during the test.

	* emacs-lisp/lisp.el (beginning-of-defun): Doc fix.

2008-08-11  Glenn Morris  <rgm@gnu.org>

	* term/ns-win.el (x-parse-geometry): Doc fix.

	* dired.el (x-popup-menu):
	* hi-lock.el (x-popup-menu):
	* mouse.el (font-face-attributes):
	* calendar/cal-menu.el (x-popup-menu):
	* calendar/calendar.el (x-popup-menu):
	* calendar/holidays.el (x-popup-menu):
	* progmodes/cperl-mode.el (x-popup-menu):
	* term/ns-win.el (dnd-open-file, tool-bar-mode, scroll-bar-scale)
	(x-open-connection):